# CINA

./: .env.example  .gitignore  .pre-commit-config.yaml  ADR.md  Dockerfile.ingestion  Dockerfile.query  Makefile  README.md  cina.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
AGENT/: CINA-ARCHITECTURE.md  CINA-PRD.md  CINA-ROADMAP.md
cina/: __init__.py  __main__.py
cina/api/: __init__.py  app.py
cina/api/middleware/: auth.py  correlation.py  error_handler.py  rate_limit.py
cina/api/routes/: health.py  metrics.py  query.py
cina/api/schemas/: events.py  query.py
cina/cli/: apikey.py  db.py  dlq.py  ingest.py  main.py  serve.py
cina/config/: __init__.py  loader.py  schema.py
cina/db/: __init__.py  connection.py
cina/db/migrations/: 001_initial_schema.sql  002_api_keys.sql
cina/db/repositories/: __init__.py  apikey.py  chunk.py  cost_event.py  document.py  prompt_version.py  query_log.py
cina/ingestion/: __init__.py  pipeline.py
cina/ingestion/chunking/: __init__.py  config.py  engine.py  sentences.py
cina/ingestion/connectors/: __init__.py  clinicaltrials.py  fda.py  protocol.py  pubmed.py
cina/ingestion/embedding/: __init__.py  config.py  openai.py  protocol.py  worker.py
cina/ingestion/queue/: __init__.py  protocol.py  redis_stream.py  sqs.py
cina/models/: __init__.py  cache.py  document.py  provider.py  query.py  search.py
cina/observability/: logging.py  metrics.py
cina/orchestration/: middleware.py
cina/orchestration/cache/: lsh.py  semantic_cache.py
cina/orchestration/limits/: cost_tracker.py  rate_limiter.py
cina/orchestration/providers/: anthropic.py  openai.py  protocol.py
cina/orchestration/routing/: circuit_breaker.py  fallback.py  prompt_router.py  provider_router.py
cina/serving/: pipeline.py
cina/serving/context/: assembler.py  prompt.py
cina/serving/rerank/: cross_encoder.py
cina/serving/search/: bm25.py  embed.py  fusion.py  vector.py
data/: README.md
docs/: PIPELINE_RUN_REPORT.md  api.md  configuration.md
docs/adr/: ADR-001-queue-abstraction.md  ADR-004-semantic-cache.md  ADR-005-provider-fallback.md  ADR-006-chunking-strategy.md
docs/demo/: README.md  health-smoke.txt  ingestion-smoke.txt  phase4-lifecycle.cast  query-smoke.txt  terraform-apply.txt  terraform-destroy.txt
docs/terraform/: DEPLOYMENT_RUNBOOK.md  cost.md  plan.txt
infra/: prometheus.yml
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: __init__.py  benchmark_chunking.py  benchmark_hybrid_search.py  benchmark_query_latency.py  benchmark_rerank.py  benchmark_reranking.py  capture_grafana_screenshots.py  ecr_push.sh
scripts/data_acquisition/: __init__.py  download_clinicaltrials.py  download_fda_spl.py  download_pubmed_oa.py
stubs/aioboto3/: __init__.pyi
stubs/asyncpg/: __init__.pyi
stubs/playwright/: async_api.pyi
tests/integration/: test_embedding_worker_flow.py  test_hybrid_search.py  test_ingestion_e2e_pubmed.py  test_phase3_orchestration_persistence.py  test_query_e2e.py  test_redis_stream_queue.py  test_repositories_db.py
tests/load/: locustfile.py
tests/unit/: test_anthropic_provider_streaming.py  test_api_app_factory.py  test_api_event_schema.py  test_api_middleware_behavior.py  test_api_route_handlers.py  test_apikey_repository_behavior.py  test_auth_middleware_phase3.py  test_bm25_searcher.py  test_chunk_repository_behavior.py  test_chunking_engine.py  test_chunking_engine_paths.py  test_cli_apikey_commands.py  test_cli_db_migrations.py  test_cli_dlq_commands.py  test_cli_serve_command.py  test_config_loader_behavior.py  test_connectors_parse.py  test_connectors_parsing_behavior.py  test_context_assembler.py  test_cost_event_repository_insert.py  test_cost_tracker_middleware.py  test_cross_encoder.py  test_db_connection_app_lifespan.py  test_db_connection_lifecycle.py  test_document_repository_behavior.py  test_embedding_config_model.py  test_embedding_openai_provider_behavior.py  test_embedding_worker_behavior.py  test_fallback_executor_branches.py  test_fallback_executor_phase3.py  test_ingest_cli.py  test_ingestion_pipeline_helpers.py  test_main_entrypoint.py  test_middleware_compose.py  test_openai_provider_streaming.py  test_orchestration_hardening.py  test_pipeline_process_single.py  test_pipeline_search_stages.py  test_prompt_builder.py  test_prompt_version_repository_behavior.py  (+14 more)
(+24 files in other folders)
