[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cina"
version = "0.1.0"
description = "Clinical Index and Narrative Assembly infrastructure scaffold"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "CINA" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "asyncpg>=0.29.0",
  "redis[hiredis]>=5.0.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "openai>=1.50.0",
  "tiktoken>=0.7.0",
  "numpy>=1.26.0",
  "sentence-transformers>=3.0.0",
  "torch>=2.4.0",
  "lxml>=5.2.0",
  "prometheus-client>=0.21.0",
  "structlog>=24.4.0",
  "typer>=0.12.0",
  "rich>=13.8.0",
  "pyyaml>=6.0.0",
  "bcrypt>=4.2.0",
  "aioboto3>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "types-PyYAML>=6.0.12",
  "mypy>=1.11.0",
  "ruff>=0.6.0",
  "pre-commit>=3.8.0",
  "locust>=2.31.0",
]

[project.scripts]
cina = "cina.cli.main:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cina*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
check_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
pretty = true
exclude = ["^tests/"]

[[tool.mypy.overrides]]
module = [
  "sentence_transformers.*",
  "torch.*",
  "redis.*",
  "fastapi.*",
  "starlette.*",
  "asyncpg.*",
  "yaml.*",
  "pydantic_settings.*",
  "structlog.*",
  "aioboto3",
  "aioboto3.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
