[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cina"
version = "0.1.0"
description = "Clinical Index and Narrative Assembly infrastructure scaffold"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Mehdi Skouri" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "asyncpg>=0.29.0",
  "redis[hiredis]>=5.0.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "openai>=1.50.0",
  "tiktoken>=0.7.0",
  "numpy>=1.26.0",
  "sentence-transformers>=3.0.0",
  "torch>=2.4.0",
  "lxml>=5.2.0",
  "prometheus-client>=0.21.0",
  "structlog>=24.4.0",
  "typer>=0.12.0",
  "rich>=13.8.0",
  "pyyaml>=6.0.0",
  "bcrypt>=4.2.0",
  "aioboto3>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "types-PyYAML>=6.0.12",
  "mypy>=1.11.0",
  "ruff>=0.6.0",
  "pre-commit>=3.8.0",
  "locust>=2.31.0",
]

[project.scripts]
cina = "cina.cli.main:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cina*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "A002",
  "ANN",
  "ARG",
  "BLE001",
  "D",
  "E501",
  "EM101",
  "EM102",
  "FBT001",
  "FBT002",
  "FBT003",
  "PERF401",
  "PLC0415",
  "PLR0915",
  "PLR2004",
  "PLW0108",
  "PLW2901",
  "S101",
  "S106",
  "S311",
  "SLF001",
  "TC001",
  "TC003",
  "TRY003",
]
"stubs/**/*.pyi" = [
  "ANN401",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
exclude = ["^tests/"]
mypy_path = ["stubs"]

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
